fix bugs in booking